# saivox-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: dev_notes.txt  notes.txt
include/: Camera.h  Game.h  GameWindow.h  InputManager.h  InputState.h  Mesh.h  Renderer.h  Shader.h  Texture.h
include/buffers/: EBO.h  VAO.h  VBO.h
include/glad/: glad.h
src/: Camera.cpp  Game.cpp  GameWindow.cpp  InputManager.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  main.cpp
src/buffers/: EBO.cpp  VAO.cpp  VBO.cpp
src/glad/: glad.c
